spring-cloud-sample/spring-cloud-eureka/src/main/jkube/sc-eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-eureka
  namespace: bjrdc-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-eureka
  template:
    metadata:
      labels:
        app: spring-cloud-eureka
    spec:
      hostAliases:
      - ip: "172.16.15.9"
        hostnames:
        - "bjrdc9"
      containers:
      - imagePullPolicy: Always
