spring-cloud-sample/spring-cloud-eureka/src/main/jkube/spring-cloud-eureka-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-eureka-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-eureka
        backend:
          serviceName: spring-cloud-eureka
          servicePort: 8080
